--- a/Views/Course/CourseList.cshtml
+++ b/Views/Course/CourseList.cshtml
@@ -1,17 +1,16 @@
 @model List<Course>
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Course list</h1>
 
-    @Model[0].Title <br>
-    @Model[1].Title <br>
-    @Model[2].Title <br>
-
-</body>
-</html>
+    @foreach(var kurs in Model)
+    {
+    <div class="card mb-3">
+        <div class="row">
+            <div class="col-md-4">
+                <img src="~/img/@kurs.Image" class="img-fluid rounded-start" alt="">
+            </div>
+            <div class="col-md-8">
+                <h5 class="card-title">@kurs.Title</h5>
+                <p class="card-text">@kurs.Description</p>
+            </div>
+        </div>
+    </div>
+    }
