--- a/Views/Course/Index.cshtml
+++ b/Views/Course/Index.cshtml
@@ -1,22 +1,13 @@
 @model Course
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Course index page</h1>
-    <p>
-        İd: @Model.Id
-    </p>
-    <p>
-       Title: @Model.Title
-    </p>
-      <p>
-       @Model.Description
-    </p>
-</body>
-</html>
+<div class="card mb-3" id="@Model.Id">
+    <div class="row">
+        <div class="col-md-4">
+            <img src="~/img/@Model.Image" class="img-fluid rounded-start" alt="">
+        </div>
+        <div class="col-md-8">
+            <h5 class="card-title">@Model.Title</h5>
+            <p class="card-text">@Model.Description</p>
+        </div>
+    </div>
+</div>
