--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,33 +1,24 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css">
     <title>Document</title>
 </head>
+
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-dark bg-danger">
-            <div class="container">
-                <a class="navbar-brand" href="#">Course App</a>
-                <ul class="navbar-nav me-auto" >
-                    <li clas="nav-item">
-                        <a href="#" class="nav-link">Home</a>
-                    </li>
-                    <li clas="nav-item">
-                        <a href="#" class="nav-link">Kurslar</a>
-                    </li>   
-                </ul>
-            </div>
-        </nav>
+        @await Html.PartialAsync("_Navbar.cshtml")
     </header>
     <div class="container mt-3">
         <main>
             @RenderBody()
         </main>
     </div>
-    
+
 
 </body>
+
 </html>
