--- a/Views/Shared/_Navbar.cshtml
+++ b/Views/Shared/_Navbar.cshtml
@@ -1,12 +1,12 @@
 <nav class="navbar navbar-expand-sm navbar-dark bg-danger">
     <div class="container">
-        <a class="navbar-brand" href="#">Course App</a>
+        <a class="navbar-brand" asp-controller="Home" asp-action="Index">Course App</a>
         <ul class="navbar-nav me-auto">
             <li clas="nav-item">
-                <a href="#" class="nav-link">Home</a>
+                <a asp-controller="Home" asp-action="Index" class="nav-link">Home</a>
             </li>
             <li clas="nav-item">
-                <a href="#" class="nav-link">Kurslar</a>
+                <a asp-controller="Course" asp-action="List" class="nav-link">Kurslar</a>
             </li>
         </ul>
     </div>
