--- a/Views/Course/_Course.cshtml
+++ b/Views/Course/_Course.cshtml
@@ -5,8 +5,12 @@
             <img src="~/img/@Model.Image" class="img-fluid rounded-start" alt="">
         </div>
         <div class="col-md-9">
-            <h5 class="card-title">@Model.Title</h5>
-            <p class="card-text">@Model.Description</p>
+            <div class="card-body">
+                <a asp-controller="Course" asp-action="Details" asp-route-id="@Model.Id">
+                    <h5 class="card-title">@Model.Title</h5>
+                </a>
+                <p class="card-text">@Model.Description</p>
+            </div>
         </div>
     </div>
 </div>
